<resources>
    <string name="app_name">Coronavirus App</string>
    <string name="help_with_covid_19">Help with Covid-19</string>
    <string name="main_menu">Main Menu</string>
    <string name="do_i_have_covid_19">Do I have Covid-19?</string>
    <string name="symptoms">Symptoms</string>
    <string name="cdc_covid_19_webpage">CDC Covid-19 Webpage</string>
    <string name="usa_case_map">USA Case Map</string>
    <string name="credits">Credits</string>
    <string name="virus_image">Virus Image</string>
    <string name="stay_home_stay_safe">Stay Home. Stay Safe.</string>
    <string name="credits_text">Main Developer: Bryson Adcock\n\nVirus Image:\nwww.statnews.com/2020/02/11/disease-caused-by-the-novel-coronavirus-has-name-covid-19/\n\nUS Case Statistics from New York Times:\nwww.nytimes.com/interactive/2020/us/coronavirus-us-cases.html</string>
    <string name="usa_case_btn">USA Case Statistics (NY Times)</string>
    <string name="guidelines">Guidelines</string>
    <string name="title_label">What you need to know about Coronavirus</string>
    <string name="do_you_have_a_persistent_fever">Do you have a persistent fever?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_have_a_sore_throat">Do you have a sore throat?</string>
    <string name="do_you_have_a_new_cough">Do you have a new cough?</string>
    <string name="do_you_have_shortness_of_breath">Do you have shortness of breath?</string>
    <string name="do_you_have_new_muscle_aches">Do you have new muscle aches?</string>
    <string name="do_you_have_sudden_loss_of_taste_or_smell">Do you have sudden loss of taste or smell?</string>
    <string name="check_my_results">Check My Results</string>
    <string name="default_result">Answer the questions to get suggestions</string>
    <string name="source_text">Information from Center for Disease Control Website\n</string>
</resources>
