<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#020202"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4sp"
            android:layout_marginLeft="4sp"
            android:layout_marginTop="4sp"
            android:fontFamily="@font/allerta"
            android:text="@string/stay_home_stay_safe"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/pageHeader"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:clickable="false"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/credits"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/creditsText"
        android:layout_width="387dp"
        android:layout_height="186dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/allerta"
        android:text="@string/credits_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageHeader" />

    <ImageView
        android:id="@+id/virusImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/virus_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/coronavirus_cdc_square" />

</androidx.constraintlayout.widget.ConstraintLayout>